--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -15,19 +15,19 @@ jobs:
     name: "Build"
     uses: ./.github/workflows/build.yml
     with:
-      dotnet_version: '8.0.101'
+      dotnet_version: '8.0.402'
 
   # Preview release on push to main only
   # Stable release on version tag push only
-  deploy:
-    name: "Deploy"
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-    needs: build
-    uses: ./.github/workflows/deploy.yml
-    with:
-      dotnet_version: '8.0.101'
-      azure_nuget_feed: 'https://pkgs.dev.azure.com/benito356/NetDevOpsTest/_packaging/Example-Preview/nuget/v3/index.json'
-    secrets:
-      nuget_preview_token: "az" # Dummy values as we use Azure DevOps only - Replace with your token for nuget.org
-      nuget_stable_token: "az" # Dummy values as we use Azure DevOps only - Replace with your token for nuget.org
-      azure_nuget_token: ${{ secrets.AZURE_NUGET_TOKEN }}
+  # deploy:
+  #   name: "Deploy"
+  #   if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+  #   needs: build
+  #   uses: ./.github/workflows/deploy.yml
+  #   with:
+  #     dotnet_version: '8.0.402'
+  #     azure_nuget_feed: 'https://pkgs.dev.azure.com/pleonex/Pleosoft/_packaging/Pleosoft-Preview/nuget/v3/index.json'
+  #   secrets:
+  #     nuget_preview_token: "az" # Dummy values as we use Azure DevOps only
+  #     nuget_stable_token: "az" # Dummy values as we use Azure DevOps only
+  #     azure_nuget_token: ${{ secrets.AZURE_NUGET_TOKEN }}
