--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,9 +1,9 @@
 <Project>
   <PropertyGroup>
-    <Product>PleOps</Product>
+    <Product>Explitwiser</Product>
     <Authors>pleonex</Authors>
     <Company>None</Company>
-    <Copyright>Copyright (C) 2020 Benito Palacios Sánchez</Copyright>
+    <Copyright>Copyright (C) 2024 Benito Palacios Sánchez</Copyright>
 
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 
@@ -14,10 +14,10 @@
 
   <PropertyGroup>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/pleonex/template-csharp</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/pleonex/template-csharp</RepositoryUrl>
-    <PackageIcon>icon.png</PackageIcon>
-    <PackageTags>net;csharp;devops;pipeline;github-actions</PackageTags>
+    <PackageProjectUrl>https://github.com/pleonex/explitwiser</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/pleonex/explitwiser</RepositoryUrl>
+    <PackageIcon></PackageIcon>
+    <PackageTags>splitwise</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
