--- a/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
+++ b/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../MyLibrary/MyLibrary.csproj" />
+    <ProjectReference Include="..\PleOps.Explitwiser\PleOps.Explitwiser.csproj" />
   </ItemGroup>
 
 </Project>
