--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,7 +1,12 @@
 <Project>
   <!-- Centralize dependency management -->
   <ItemGroup>
+    <PackageVersion Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageVersion Include="Microsoft.Kiota.Bundle" Version="1.13.0" />
     <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.32.0.97167" />
+    <PackageVersion Include="Spectre.Console" Version="0.49.1" />
+    <PackageVersion Include="Spectre.Console.Analyzer" Version="1.0.0" />
   </ItemGroup>
 </Project>
