--- a/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
+++ b/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
@@ -13,4 +13,15 @@
     <ProjectReference Include="..\PleOps.Explitwiser\PleOps.Explitwiser.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
+    <PackageReference Include="Spectre.Console" />
+    <PackageReference Include="Spectre.Console.Analyzer">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
