📚 Update readme and delete unused docs

--- a/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
+++ b/src/PleOps.Explitwiser.Console/PleOps.Explitwiser.Console.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
+    <AssemblyName>Explitwiser.Console</AssemblyName>
 
     <TargetFramework>net8.0</TargetFramework>
 
