--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -19,15 +19,15 @@ jobs:
 
   # Preview release on push to main only
   # Stable release on version tag push only
-  # deploy:
-  #   name: "Deploy"
-  #   if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
-  #   needs: build
-  #   uses: ./.github/workflows/deploy.yml
-  #   with:
-  #     dotnet_version: '8.0.402'
-  #     azure_nuget_feed: 'https://pkgs.dev.azure.com/pleonex/Pleosoft/_packaging/Pleosoft-Preview/nuget/v3/index.json'
-  #   secrets:
-  #     nuget_preview_token: "az" # Dummy values as we use Azure DevOps only
-  #     nuget_stable_token: "az" # Dummy values as we use Azure DevOps only
-  #     azure_nuget_token: ${{ secrets.AZURE_NUGET_TOKEN }}
+  deploy:
+    name: "Deploy"
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags/v')
+    needs: build
+    uses: ./.github/workflows/deploy.yml
+    with:
+      dotnet_version: '8.0.402'
+      azure_nuget_feed: 'https://pkgs.dev.azure.com/pleonex/Pleosoft/_packaging/Pleosoft-Preview/nuget/v3/index.json'
+    secrets:
+      nuget_preview_token: "az" # Dummy values as we use Azure DevOps only
+      nuget_stable_token: "az" # Dummy values as we use Azure DevOps only
+      azure_nuget_token: "not-set"
