--- a/src/PleOps.Splitwise.Client/PleOps.Splitwise.Client.csproj
+++ b/src/PleOps.Splitwise.Client/PleOps.Splitwise.Client.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../../docs/index.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="False" />
+    <None Include="../../README.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="False" />
 
     <None Include="swagger.json" />
   </ItemGroup>
